@startuml

title __PAGINATION's Class Diagram__\n

  namespace tw.waterball.impls.instagram4j {
    namespace pagination {
      class tw.waterball.impls.instagram4j.pagination.InstagramCommentPagingIterator {
          - nextMaxCommentPk : String
          - result : InstagramGetMediaCommentsResult
          - userPk : long
          + InstagramCommentPagingIterator()
          + InstagramCommentPagingIterator()
          # getNextPage()
          # hasNextPage()
      }
    }
  }
  

  namespace tw.waterball.impls.instagram4j {
    namespace pagination {
      class tw.waterball.impls.instagram4j.pagination.InstagramCommenterPagingIterator {
          + InstagramCommenterPagingIterator()
          # getNextPage()
          # hasNextPage()
      }
    }
  }
  

  namespace tw.waterball.impls.instagram4j {
    namespace pagination {
      class tw.waterball.impls.instagram4j.pagination.InstagramDistinctCommenterPagingIterator {
          - nextMaxCommentPk : String
          - result : InstagramGetMediaCommentsResult
          - userPk : long
          + InstagramDistinctCommenterPagingIterator()
          + InstagramDistinctCommenterPagingIterator()
          # getNextPage()
          # hasNextPage()
      }
    }
  }
  

  namespace tw.waterball.impls.instagram4j {
    namespace pagination {
      class tw.waterball.impls.instagram4j.pagination.InstagramFeedPagingIterator {
          - nextMaxId : String
          - result : InstagramFeedResult
          - userPk : long
          + InstagramFeedPagingIterator()
          + InstagramFeedPagingIterator()
          # getNextPage()
          # hasNextPage()
      }
    }
  }
  

  namespace tw.waterball.impls.instagram4j {
    namespace pagination {
      class tw.waterball.impls.instagram4j.pagination.InstagramFollowerPagingIterator {
          - nextMaxId : String
          - result : InstagramGetUserFollowersResult
          - userPk : long
          + InstagramFollowerPagingIterator()
          + InstagramFollowerPagingIterator()
          # getNextPage()
          # hasNextPage()
      }
    }
  }
  

  namespace tw.waterball.impls.instagram4j {
    namespace pagination {
      class tw.waterball.impls.instagram4j.pagination.InstagramFollowingPagingIterator {
          - nextMaxId : String
          - result : InstagramGetUserFollowersResult
          - userPk : long
          + InstagramFollowingPagingIterator()
          + InstagramFollowingPagingIterator()
          # getNextPage()
          # hasNextPage()
      }
    }
  }
  

  tw.waterball.impls.instagram4j.pagination.InstagramCommentPagingIterator -up-|> tw.waterball.api.pagination.PagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramCommentPagingIterator o-- tw.waterball.impls.instagram4j.Instagram4JAdapter : ig
  tw.waterball.impls.instagram4j.pagination.InstagramCommenterPagingIterator -up-|> tw.waterball.api.pagination.PagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramCommenterPagingIterator o-- tw.waterball.impls.instagram4j.pagination.InstagramCommentPagingIterator : instagramCommentPagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramDistinctCommenterPagingIterator -up-|> tw.waterball.api.pagination.PagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramDistinctCommenterPagingIterator o-- tw.waterball.impls.instagram4j.Instagram4JAdapter : ig
  tw.waterball.impls.instagram4j.pagination.InstagramFeedPagingIterator -up-|> tw.waterball.api.pagination.PagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramFeedPagingIterator o-- tw.waterball.impls.instagram4j.Instagram4JAdapter : ig
  tw.waterball.impls.instagram4j.pagination.InstagramFollowerPagingIterator -up-|> tw.waterball.api.pagination.PagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramFollowerPagingIterator o-- tw.waterball.impls.instagram4j.Instagram4JAdapter : ig
  tw.waterball.impls.instagram4j.pagination.InstagramFollowingPagingIterator -up-|> tw.waterball.api.pagination.PagingIterator
  tw.waterball.impls.instagram4j.pagination.InstagramFollowingPagingIterator o-- tw.waterball.impls.instagram4j.Instagram4JAdapter : ig


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
